@@ -4,6 +4,7 @@
     available, see #187
   * add `popcount64()` to `bitarray.h` - we assume now that `uint64_t` is
     always available
+  * improve testing
 
 
 2023-02-10   2.7.1:
